rafactore to champions (WIP)

--- a/views/detalhes.ejs
+++ b/views/detalhes.ejs
@@ -24,14 +24,8 @@
         <img src="<%= pokemon.Imagem %>" alt="imagem do pokemon">
     </section>
     <section class="detalhes-texto">
-        <h2>Número: <%= pokemon.Numero %></h2>
-        <h2>Nome: <%= pokemon.Nome %></h2>
-        <h2>Tipo: <%= pokemon.Tipo %></h2>
-        <h2>Descricao: <%= pokemon.Descricao %></h2>
-        <h2>Altura: <%= pokemon.Altura %> m</h2>
-        <h2>Peso: <%= pokemon.Peso %> Kg</h2>
-        <h2>Categoria: <%= pokemon.Categoria %></h2>
-        <h2>Habilidade: <%= pokemon.Habilidade %></h2>
+        <h2>name_: <%= champions.name_ %></h2>
+
     </section>
 </div>
 <footer>
