--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,8 +32,8 @@
         </div>
 </header>
 <section class="catálogo">
-    <div id="pokedex">
-        <% pokedex.forEach((item, index)=> { %>
+    <div id="Champions">
+        <% champions.forEach((item, index)=> { %>
             <a class="cartão" href="/detalhes/<%= index %>">
                 <img src="<%= item.Imagem %>">
                 <h2><%= item.Nome %></h2>
