details page (WIP)

--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "/css/style.css">
-    <title>Pokedéx | Cadastro</title>
+    <title>AutoChess | Cadastro</title>
     <link rel="icon" type="image/png" href="img/pokebola.png"/>
 </head>
 <body>
@@ -21,47 +21,75 @@
 <section id="cadastro">
     <form action="/new" method="POST">
         <div>
-            <label for="numero">Número: </label>
+            <label for="numero">ID: </label>
             <input type="text" name="Numero" id="numero" placeholder="Registre o número do seu Pokémon!" required>
         </div>
         <div>
-            <label for="nome">Nome: </label>
+            <label for="nome">Name: </label>
             <input type="text" name="Nome" id="nome" placeholder="Registre o nome do seu Pokémon!" required>
         </div>
         <div>
-            <label for="tipo">Tipo: </label>
+            <label for="tipo">Hp: </label>
             <input type="text" name="Tipo" id="tipo" placeholder="Registre o tipo do seu Pokémon!" required>
         </div>
         <div>
-            <label for="imagem">Imagem: </label>
+            <label for="imagem">ATK: </label>
             <input type="text" name="Imagem" id="imagem" placeholder="Registre a imagem do seu Pokémon!" required>
         </div>
         <div>
-            <label for="descricao">Descrição: </label>
+            <label for="descricao">DEF: </label>
             <input type="text" name="Descricao" id="descricao" placeholder="Registre a descrição do seu Pokémon!" required>
         </div>
         <div>
-            <label for="altura">Altura: </label>
+            <label for="altura">SPD: </label>
             <input type="text" name="Altura" id="altura" placeholder="Registre a altura do seu Pokémon!" required>
         </div>
         <div>
-            <label for="peso">Peso: </label>
+            <label for="peso">Crit Damage: </label>
             <input type="text" name="Peso" id="peso" placeholder="Registre o peso do seu Pokémon!" required>
         </div>
         <div>
-            <label for="categoria">Categoria: </label>
+            <label for="categoria">Crit Rate: </label>
             <input type="text" name="Categoria" id="categoria" placeholder="Registre a categoria do seu Pokémon!" required>
         </div>
         <div>
-            <label for="habilidade">Habilidade: </label>
+            <label for="habilidade">Accuracy: </label>
             <input type="text" name="Habilidade" id="habilidade" placeholder="Registre a habilidade do seu Pokémon!" required>
         </div>
-        <button type="submit">Capturar</button>
+        <div>
+            <label for="habilidade">Resistance: </label>
+            <input type="text" name="Habilidade" id="habilidade" placeholder="Registre a habilidade do seu Pokémon!" required>
+        </div>
+        <div>
+            <label for="habilidade">Basic Attack: </label>
+            <input type="text" name="Habilidade" id="habilidade" placeholder="Registre a habilidade do seu Pokémon!" required>
+        </div>
+        <div>
+            <label for="habilidade">Skill 1: </label>
+            <input type="text" name="Habilidade" id="habilidade" placeholder="Registre a habilidade do seu Pokémon!" required>
+        </div>
+        <div>
+            <label for="habilidade">Role: </label>
+            <input type="text" name="Habilidade" id="habilidade" placeholder="Registre a habilidade do seu Pokémon!" required>
+        </div>
+        <div>
+            <label for="habilidade">Species: </label>
+            <input type="text" name="Habilidade" id="habilidade" placeholder="Registre a habilidade do seu Pokémon!" required>
+        </div>
+        <div>
+            <label for="habilidade">Cost: </label>
+            <input type="text" name="Habilidade" id="habilidade" placeholder="Registre a habilidade do seu Pokémon!" required>
+        </div>
+        <div>
+            <label for="habilidade">image: </label>
+            <input type="text" name="Habilidade" id="habilidade" placeholder="Registre a habilidade do seu Pokémon!" required>
+        </div>
+        <button type="submit">Cadastrar</button>
     </form>
 </section>
 <footer>
     <div class="final">
-        Projeto Pokedéx
+        Auto Chess
     </div>
 </footer>
 <script src="/js/script.js"></script>
