--- a/views/detalhes.ejs
+++ b/views/detalhes.ejs
@@ -4,33 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href = "/css/style.css">
-    <title>Pokedéx | Detalhes</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Champions | Detalhes</title>
     <link rel="icon" type="image/png" href="img/pokebola.png"/>
 </head>
 <body>
 <header id="header-3">
     <div class="sumário">
         <nav>
-            <p class="título">Detalhes do seu <strong>Pokémon</strong></p>
+            <p class="título">Detalhes do seu <strong>Champion</strong></p>
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/cadastro">Cadastro</a></li>
             </ul>
         </nav>
+    </div>
 </header>
 <div class="detalhes">
-    <section>
-        <img src="<%= pokemon.Imagem %>" alt="imagem do pokemon">
-    </section>
-    <section class="detalhes-texto">
-        <h2>name_: <%= champions.name_ %></h2>
 
+    <section class="detalhes-texto">
+        <h2>name_: <%= champions.name %></h2>
     </section>
+
+
 </div>
 <footer>
     <div class="final">
-        Projeto Pokedéx
+        Auto Chess
     </div>
 </footer>
 <script src="/js/script.js"></script>
