--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "/css/style.css">
-    <title>Pokedéx</title>
+    <title>AutoChess</title>
     <link rel="icon" type="image/png" href="img/pokebola.png"/>
 </head>
 <body>
@@ -17,7 +17,7 @@
     <% }  %>
     <div class="sumário">
         <nav>
-            <p class="título"> <strong>Pokedéx</strong></p>
+            <p class="título"> <strong>AutoChess</strong></p>
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/cadastro">Cadastro</a></li>
@@ -36,15 +36,16 @@
         <% champions.forEach((item, index)=> { %>
             <a class="cartão" href="/detalhes/<%= index %>">
                 <img src="<%= item.Imagem %>">
-                <h2><%= item.Nome %></h2>
-                <h4><%= item.Tipo %></h4>
+                <h2><%= item.name_ %></h2>
+                <h4><%= item.role_ %></h4>
+                <h4><%= item.species %></h4>
             </a>
         <% }) %>
     </div>
 </section>
 <footer>
     <div class="final">
-        Projeto Pokedéx
+        Auto Chess
     </div>
 </footer>
 <script src="/js/script.js"></script>
