fix details route page

--- a/views/detalhes.ejs
+++ b/views/detalhes.ejs
@@ -21,9 +21,9 @@
     </div>
 </header>
 <div class="detalhes">
-
     <section class="detalhes-texto">
-        <h2>name_: <%= champions.name %></h2>
+        <h2>name_: <%= champions.name_  %></h2>
+
     </section>
 
 
